--- a/pages/style/styles.css
+++ b/pages/style/styles.css
@@ -10,99 +10,43 @@ input {
   all: unset;
 }
 
-.TabsRoot {
-  display: flex;
-  flex-direction: column;
-  width: 600px;
-  box-shadow: 0 2px 10px var(--black-a4);
+.DialogOverlay {
+  background-color: var(--black-a9);
+  position: fixed;
+  inset: 0;
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
-.TabsList {
-  flex-shrink: 0;
-  display: flex;
-  border-bottom: 1px solid var(--mauve-6);
-}
-
-.TabsTrigger {
-  font-family: inherit;
+.DialogContent {
   background-color: white;
-  padding: 0 20px;
-  height: 45px;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-  line-height: 1;
-  color: var(--mauve-11);
-  user-select: none;
+  border-radius: 6px;
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90vw;
+  max-width: 450px;
+  max-height: 85vh;
+  padding: 25px;
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
-.TabsTrigger:first-child {
-  border-top-left-radius: 6px;
-}
-.TabsTrigger:last-child {
-  border-top-right-radius: 6px;
-}
-.TabsTrigger:hover {
-  color: var(--violet-11);
-}
-.TabsTrigger[data-state='active'] {
-  color: var(--violet-11);
-  box-shadow: inset 0 -1px 0 0 currentColor, 0 1px 0 0 currentColor;
-}
-.TabsTrigger:focus {
-  position: relative;
-  box-shadow: 0 0 0 2px black;
-}
-
-.TabsContent {
-  flex-grow: 1;
-  padding: 20px;
-  background-color: white;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+.DialogContent:focus {
   outline: none;
 }
-.TabsContent:focus {
-  box-shadow: 0 0 0 2px black;
+
+.DialogTitle {
+  margin: 0;
+  font-weight: 500;
+  color: var(--mauve-12);
+  font-size: 17px;
 }
 
-.Text {
-  margin-top: 0;
-  margin-bottom: 20px;
+.DialogDescription {
+  margin: 10px 0 20px;
   color: var(--mauve-11);
   font-size: 15px;
   line-height: 1.5;
-}
-
-.Fieldset {
-  margin-bottom: 15px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.Label {
-  font-size: 13px;
-  line-height: 1;
-  margin-bottom: 10px;
-  color: var(--violet-12);
-  display: block;
-}
-
-.Input {
-  flex: 1 0 auto;
-  border-radius: 4px;
-  padding: 0 10px;
-  font-size: 15px;
-  line-height: 1;
-  color: var(--violet-11);
-  box-shadow: 0 0 0 1px var(--violet-7);
-  height: 35px;
-}
-.Input:focus {
-  box-shadow: 0 0 0 2px var(--violet-8);
 }
 
 .Button {
@@ -110,19 +54,112 @@ input {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-  padding: 0 15px;
+  padding: 0px;
   font-size: 15px;
   line-height: 1;
   font-weight: 500;
   height: 35px;
 }
+
+.Button.home {
+  background-color: white;
+  color: black;
+  flex: 1;
+  text: black
+}
+.Button.violet {
+  background-color: white;
+  color: var(--violet-11);
+  border: 1px grey solid;
+}
+.Button.violet:hover {
+  background-color: var(--mauve-3);
+}
+.Button.violet:focus {
+  box-shadow: 0 0 0 2px black;
+}
 .Button.green {
   background-color: var(--green-4);
   color: var(--green-11);
+  max-width: 100%;
+  width: 100vw;
 }
 .Button.green:hover {
   background-color: var(--green-5);
 }
 .Button.green:focus {
   box-shadow: 0 0 0 2px var(--green-7);
+}
+
+.IconButton {
+  font-family: inherit;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--violet-11);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.IconButton:hover {
+  background-color: var(--violet-4);
+}
+.IconButton:focus {
+  box-shadow: 0 0 0 2px var(--violet-7);
+}
+
+.Fieldset {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.Label {
+  font-size: 15px;
+  color: var(--violet-11);
+  width: 90px;
+  text-align: right;
+}
+
+/*.Input {*/
+/*  width: 100%;*/
+/*  flex: 1;*/
+/*  display: inline-flex;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  border-radius: 4px;*/
+/*  padding: 0 10px;*/
+/*  font-size: 15px;*/
+/*  line-height: 1;*/
+/*  color: var(--violet-11);*/
+/*  box-shadow: 0 0 0 1px var(--violet-7);*/
+/*  height: 35px;*/
+/*}*/
+.Input:focus {
+  /*box-shadow: 0 0 0 2px var(--violet-8);*/
+  outline: none !important;
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.96);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
